<resources>
    <string name="app_name">AppSelect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_page">Next page</string>
    <string name="film_preview">film preview</string>
    <string name="next_page_button">next page button</string>
    <string name="previous_page_button">previous page button</string>
    <string name="previous_page">Previous page</string>
    <string name="loading">Loading...</string>
    <string name="image_is_loading">image is loading</string>
</resources>