<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clFilmReview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivFilmPreview"
        android:layout_width="wrap_content"
        android:contentDescription="@string/film_preview"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/tvDescroption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:maxLines="2"
        tools:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivFilmPreview"
        app:layout_constraintTop_toTopOf="@+id/ivFilmPreview" />

    <TextView
        android:id="@+id/tvDescroption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        tools:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llWaiting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivFilmPreview"
        app:layout_constraintEnd_toEndOf="@+id/ivFilmPreview"
        app:layout_constraintStart_toStartOf="@id/ivFilmPreview"
        app:layout_constraintTop_toTopOf="@+id/ivFilmPreview">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:contentDescription="@string/image_is_loading"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_autorenew_24" />

        <TextView
            android:id="@+id/tvWait"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/loading" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>